@@ -17,7 +17,7 @@
 <hr>
 Most of the benefits described here are actually benefits of
 <a href="https://smarden.org/runit/svlogd.8.html">svlogd</a> and
-<a href="http://cr.yp.to/daemontools/multilog.html">multilog</a>.
+<a href="https://cr.yp.to/daemontools/multilog.html">multilog</a>.
 But since <i>socklog</i> uses
 <a href="https://smarden.org/runit/svlogd.8.html">svlogd</a>
 as its back-end, the benefits apply
