@@ -36,7 +36,7 @@ of specified log entries.
 <a href="#klog">The socklog-klog service</a><br>
 <a href="#ucspi-tcp">The socklog-ucspi-tcp service</a><br>
 <a href="#notify">The socklog-notify service</a><br><br>
-<a href="http://cr.yp.to/daemontools/faq/create.html#remove">
+<a href="https://cr.yp.to/daemontools/faq/create.html#remove">
 Removing socklog services</a>
 <hr>
 
@@ -71,7 +71,7 @@ directories, e.g.:
   # less /var/log/socklog/main/current
 </pre>
 Optionally configure the <i>socklog-unix</i> service by
-<a href="http://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
+<a href="https://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
 the corresponding <tt>run</tt> scripts and <tt>config</tt> files:
 <ul>
   <li>/var/service/socklog-unix/run
@@ -111,7 +111,7 @@ directory:
   # less /var/log/socklog-inet/main/current
 </pre>
 Optionally configure the <i>socklog-inet</i> service by
-<a href="http://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
+<a href="https://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
 the corresponding <tt>run</tt> scripts and <tt>config</tt> file:
 <ul>
   <li>/var/service/socklog-inet/run
@@ -151,7 +151,7 @@ directory:
   # less /var/log/socklog-klog/main/current
 </pre>
 Optionally configure the <i>socklog-klog</i> service by
-<a href="http://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
+<a href="https://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
 the corresponding <tt>run</tt> scripts and <tt>config</tt> file:
 <ul>
   <li>/var/service/socklog-klog/run
@@ -189,7 +189,7 @@ directory:
   # less /var/log/socklog-ucspi-tcp/main/current
 </pre>
 Optionally configure the <i>socklog-ucspi-tcp</i> service by
-<a href="http://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
+<a href="https://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
 the corresponding <tt>run</tt> scripts and <tt>config</tt> file:
 <ul>
   <li>/var/service/socklog-ucspi-tcp/run
@@ -226,7 +226,7 @@ Wait five seconds for the service to start, you can test the service with:
   # echo test | tai64n > /var/log/socklog/.notify
 </pre>
 Optionally configure the <i>socklog-notify</i> service by
-<a href="http://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
+<a href="https://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
 the corresponding <tt>run</tt> script:
 <ul>
   <li>/var/service/socklog-notify/run
