@@ -46,7 +46,7 @@ listening on unix domain dgram socket <tt>/dev/log</tt>:
   +*.debug*
   </pre>
   <li>if you want additional
-  <a href="http://cr.yp.to/daemontools/tai64n.html">tai64n</a> time-stamps
+  <a href="https://cr.yp.to/daemontools/tai64n.html">tai64n</a> time-stamps
   prepended to each message, use this <tt>socklog-unix/log/run</tt> script
   as example:
   <pre>
