@@ -79,7 +79,7 @@ to a <a href="https://smarden.org/runit/svlogd.8.html">svlogd</a>
 process.
 <p>
 <i>socklog</i> can be run as an
-<a href="http://cr.yp.to/proto/ucspi.txt">ucspi</a> application to
+<a href="https://cr.yp.to/proto/ucspi.txt">ucspi</a> application to
 listen to an unix domain stream socket and for centralized or more
 flexible distributed logging (see
 <a href="network.html">network logging</a>).
@@ -91,7 +91,7 @@ where <tt>a.b.c.d</tt> is the ip address of the connecting system.
 If the environment variables <tt>$UID</tt> and/or <tt>$GID</tt> are present,
 <i>socklog</i> drops permissions to those ids after creating and binding
 to the socket (not in
-<a href="http://cr.yp.to/proto/ucspi.txt">ucspi</a> mode).
+<a href="https://cr.yp.to/proto/ucspi.txt">ucspi</a> mode).
 <p>
 <i>socklog</i>  converts syslog <tt>facility</tt> and <tt>priority</tt>
 information to names (&quot;<tt>facility.priority</tt>&quot;) as found in
