@@ -10,7 +10,7 @@
 <h1>socklog - installation</h1>
 <hr>
 Since version 0.3.0, <i>socklog</i> installs into
-<a href="http://cr.yp.to/slashpackage.html">/package</a>.
+<a href="https://cr.yp.to/slashpackage.html">/package</a>.
 <p>
 Check that you have the recent version of
 <a href="https://smarden.org/runit/">runit</a> installed.
