@@ -42,7 +42,7 @@ decision, what to do in such cases.
 </ul>
 There are no restrictions on how to transmit the log data, a separate
 process of your choice will do the work, e.g. <i>netcat</i> or
-<a href="http://cr.yp.to/ucspi-tcp/tcpclient.html">tcpclient</a>.
+<a href="https://cr.yp.to/ucspi-tcp/tcpclient.html">tcpclient</a>.
 This modularity lets you easily insert authentication, compression,
 encryption and other things.
 <h2>Example setup</h2>
