@@ -1,3 +1,4 @@
+  * doc/*: switch all cr.yp.to http links to https.
   * doc/*, man/*, package/README: switch all smarden.org http links to https.
   * tryto.c: don't report failure if the final try of prog succeeds (thx
     Andras Korn).
